# boids

./: CMakeLists.txt  README.md  description.md  run.sh  runpy.sh
src/: Flock.cpp  Flock.h  KDTree.cpp  KDTree.h  Simulation.cpp  Vector2D.cpp  pyboids.cpp
src/pythonInterface/: simulate.py
